--- a/HorizonApache/pom.xml
+++ b/HorizonApache/pom.xml
@@ -26,5 +26,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>[1.6.1,)</version>
         </dependency>
+        <dependency>
+            <groupId>com.hubspot</groupId>
+            <artifactId>HorizonCore</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
