--- a/HorizonNing/pom.xml
+++ b/HorizonNing/pom.xml
@@ -21,5 +21,12 @@
             <artifactId>async-http-client</artifactId>
             <version>1.8.13</version>
         </dependency>
+        <dependency>
+            <groupId>com.hubspot</groupId>
+            <artifactId>HorizonCore</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
