--- a/HorizonCore/pom.xml
+++ b/HorizonCore/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
+            <artifactId>annotations</artifactId>
             <version>[2.0.0,)</version>
         </dependency>
         <dependency>
