--- a/HorizonCore/pom.xml
+++ b/HorizonCore/pom.xml
@@ -20,22 +20,22 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>annotations</artifactId>
-            <version>[2.0.0,)</version>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>[10.0.1,)</version>
+            <version>17.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>[2.0.0,)</version>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.xerial.snappy</groupId>
             <artifactId>snappy-java</artifactId>
-            <version>[1.0.5,)</version>
+            <version>1.1.1.3</version>
         </dependency>
     </dependencies>
 
