--- a/HorizonApache/pom.xml
+++ b/HorizonApache/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.2.6</version>
+            <version>4.3.6</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -50,13 +50,17 @@
                             <shadedArtifactAttached>false</shadedArtifactAttached>
                             <artifactSet>
                                 <includes>
-                                    <include>com.hubspot:HorizonCore</include>
+                                    <include>com.hubspot:HorizonApache</include>
                                 </includes>
                             </artifactSet>
                             <relocations>
                                 <relocation>
                                     <pattern>org.apache.http</pattern>
                                     <shadedPattern>org.apache.shaded.http</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.apache.commons.codec</pattern>
+                                    <shadedPattern>org.apache.shaded.commons.codec</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
