--- a/pom.xml
+++ b/pom.xml
@@ -1,83 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.hubspot</groupId>
-        <artifactId>basepom</artifactId>
-        <version>10.4</version>
-    </parent>
+  <parent>
+    <groupId>com.hubspot</groupId>
+    <artifactId>basepom</artifactId>
+    <version>12.5</version>
+  </parent>
 
-    <artifactId>Horizon</artifactId>
-    <packaging>pom</packaging>
-    <version>0.0.14-SNAPSHOT</version>
-    <description>Simple interfaces for making HTTP requests</description>
-    <url>https://github.com/HubSpot/Horizon</url>
+  <artifactId>Horizon</artifactId>
+  <packaging>pom</packaging>
+  <version>0.0.14-SNAPSHOT</version>
+  <description>Simple interfaces for making HTTP requests</description>
+  <url>https://github.com/HubSpot/Horizon</url>
 
-    <scm>
-        <connection>scm:git:git@github.com:HubSpot/Horizon.git</connection>
-        <developerConnection>scm:git:git@github.com:HubSpot/Horizon.git</developerConnection>
-        <url>git@github.com:HubSpot/Horizon.git</url>
-    </scm>
+  <scm>
+    <connection>scm:git:git@github.com:HubSpot/Horizon.git</connection>
+    <developerConnection>scm:git:git@github.com:HubSpot/Horizon.git</developerConnection>
+    <url>git@github.com:HubSpot/Horizon.git</url>
+  </scm>
 
-    <developers>
-        <developer>
-            <name>Jonathan Haber</name>
-            <email>jhaber@hubspot.com</email>
-        </developer>
-    </developers>
+  <developers>
+    <developer>
+      <name>Jonathan Haber</name>
+      <email>jhaber@hubspot.com</email>
+    </developer>
+  </developers>
 
-    <properties>
-        <horizon.version>${project.version}</horizon.version>
-    </properties>
+  <modules>
+    <module>HorizonCore</module>
+    <module>HorizonApache</module>
+    <module>HorizonNing</module>
+  </modules>
 
-    <modules>
-        <module>HorizonCore</module>
-        <module>HorizonApache</module>
-        <module>HorizonNing</module>
-    </modules>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.hubspot</groupId>
-                <artifactId>HorizonCore</artifactId>
-                <version>${project.version}</version>
-                <type>test-jar</type>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>4.4.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpcore</artifactId>
-                <version>4.4.1</version>
-            </dependency>
-            <dependency>
-                <groupId>org.xerial.snappy</groupId>
-                <artifactId>snappy-java</artifactId>
-                <version>1.1.1.3</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
+  <dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <scope>test</scope>
-        </dependency>
+      <dependency>
+        <groupId>com.hubspot</groupId>
+        <artifactId>HorizonCore</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.hubspot</groupId>
+        <artifactId>HorizonCore</artifactId>
+        <version>${project.version}</version>
+        <type>test-jar</type>
+      </dependency>
+      <dependency>
+        <groupId>com.hubspot</groupId>
+        <artifactId>HorizonApache</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.hubspot</groupId>
+        <artifactId>HorizonNing</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.4.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+        <version>4.4.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.xerial.snappy</groupId>
+        <artifactId>snappy-java</artifactId>
+        <version>1.1.1.3</version>
+      </dependency>
     </dependencies>
+  </dependencyManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
