--- a/HorizonNing/pom.xml
+++ b/HorizonNing/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>Horizon</artifactId>
         <groupId>com.hubspot</groupId>
-        <version>0.0.15-SNAPSHOT</version>
+        <version>0.0.15</version>
     </parent>
 
     <artifactId>HorizonNing</artifactId>
