--- a/HorizonApache/pom.xml
+++ b/HorizonApache/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.hubspot</groupId>
         <artifactId>Horizon</artifactId>
-        <version>0.0.17</version>
+        <version>0.0.18-SNAPSHOT</version>
     </parent>
 
     <artifactId>HorizonApache</artifactId>
