--- a/HorizonNing/pom.xml
+++ b/HorizonNing/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>async-http-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
