--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
         <version>4.4.4</version>
       </dependency>
       <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty</artifactId>
+        <version>3.9.2.Final</version>
+      </dependency>
+      <dependency>
         <groupId>org.xerial.snappy</groupId>
         <artifactId>snappy-java</artifactId>
         <version>1.1.2</version>
