--- a/HorizonCore/pom.xml
+++ b/HorizonCore/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.hubspot</groupId>
         <artifactId>Horizon</artifactId>
-        <version>0.0.21</version>
+        <version>0.0.22-SNAPSHOT</version>
     </parent>
 
     <artifactId>HorizonCore</artifactId>
