--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>basepom</artifactId>
-    <version>15.1</version>
+    <version>15.13</version>
   </parent>
 
   <artifactId>Horizon</artifactId>
   <packaging>pom</packaging>
-  <version>0.0.27-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
   <description>Simple interfaces for making HTTP requests</description>
   <url>https://github.com/HubSpot/Horizon</url>
 
@@ -30,6 +30,7 @@
 
   <properties>
     <pom.path>${project.build.directory}/${project.artifactId}-${project.version}.pom</pom.path>
+    <ning.async.version>1.9.38</ning.async.version>
   </properties>
 
   <modules>
@@ -64,7 +65,7 @@
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty</artifactId>
-        <version>3.9.2.Final</version>
+        <version>3.10.5.Final</version>
       </dependency>
       <dependency>
         <groupId>org.xerial.snappy</groupId>
