Add support for multipart bodies

--- a/HorizonCore/pom.xml
+++ b/HorizonCore/pom.xml
@@ -12,6 +12,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.ning</groupId>
+            <artifactId>async-http-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
