--- a/HorizonNing/pom.xml
+++ b/HorizonNing/pom.xml
@@ -102,6 +102,11 @@
                                 <shadedPattern>META-INF/native/libcom_hubspot_horizon_shaded_netty_transport_native_epoll_x86_64.so</shadedPattern>
                                 <rawString>true</rawString>
                             </relocation>
+                            <relocation>
+                                <pattern>META-INF/native/libcom_hubspot_horizon_shaded_netty_transport_native_kqueue_x86_64.jnilib</pattern>
+                                <shadedPattern>META-INF/native/libcom_hubspot_horizon_shaded_netty_transport_native_epoll_x86_64.so</shadedPattern>
+                                <rawString>true</rawString>
+                            </relocation>
                         </relocations>
                     </configuration>
                 </plugin>
