--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
   </modules>
 
   <properties>
+    <project.build.targetJdk>11</project.build.targetJdk>
+    <project.build.sourceJdk>11</project.build.sourceJdk>
+    <project.build.releaseJdk>11</project.build.releaseJdk>
+    <basepom.check.skip-findbugs>true</basepom.check.skip-findbugs>
+
     <dep.slf4j.version>1.7.30</dep.slf4j.version>
   </properties>
 
