--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,14 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>basepom</artifactId>
-    <version>61.2</version>
+    <version>63.0</version>
   </parent>
 
   <artifactId>Horizon</artifactId>
   <version>0.3.2-SNAPSHOT</version>
   <packaging>pom</packaging>
+
+  <name>${project.groupId}:${project.artifactId}</name>
   <description>Simple interfaces for making HTTP requests</description>
 
   <modules>
@@ -82,6 +84,22 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <url>https://github.com/HubSpot/Horizon</url>
+
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Jared Stehler</name>
+      <email>jstehler@hubspot.com</email>
+    </developer>
+  </developers>
 
   <scm>
     <connection>scm:git:git@github.com:HubSpot/Horizon.git</connection>
