don't skip test-jar

--- a/HorizonApache/pom.xml
+++ b/HorizonApache/pom.xml
@@ -42,8 +42,7 @@
     </dependency>
     <dependency>
       <groupId>com.kohlschutter.junixsocket</groupId>
-      <artifactId>junixsocket-core</artifactId>
-      <type>pom</type>
+      <artifactId>junixsocket-common</artifactId>
     </dependency>
     <dependency>
       <groupId>com.hubspot</groupId>
