--- a/HorizonCore/pom.xml
+++ b/HorizonCore/pom.xml
@@ -59,6 +59,15 @@
         <artifactId>maven-jar-plugin</artifactId>
         <executions>
           <execution>
+            <id>basepom.default</id>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+            <configuration>
+              <skip>false</skip>
+            </configuration>
+          </execution>
+          <execution>
             <goals>
               <goal>test-jar</goal>
             </goals>
