--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <artifactId>junixsocket-core</artifactId>
         <version>2.10.1</version>
         <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>com.hubspot</groupId>
