--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,18 @@
     <module>HorizonNing</module>
   </modules>
 
+  <properties>
+    <basepom.check.skip-dependency-versions-check>true</basepom.check.skip-dependency-versions-check>
+
+    <dep.netty.version>4.2.7.Final</dep.netty.version>
+  </properties>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.asynchttpclient</groupId>
         <artifactId>async-http-client</artifactId>
-        <version>3.0.2</version>
+        <version>3.0.4</version>
       </dependency>
       <dependency>
         <groupId>com.kohlschutter.junixsocket</groupId>
